sketch implementation for drawing config from the database
